xidlc/tests/snapshots/codegen_snapshot__openrpc__attribute.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openrpc.json
===============
{
  "info": {
    "title": "xidl",
    "version": "0.1.0"
  },
  "methods": [
    {
      "name": "book.Shelf.get_attribute_count",
      "params": [],
      "result": {
        "name": "result",
        "schema": {
          "properties": {
            "return": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "return"
          ],
          "type": "object"
        }
      }
    },
    {
      "name": "book.Shelf.get_attribute_title",
      "params": [],
      "result": {
        "name": "result",
        "schema": {
          "properties": {
            "return": {
              "type": "string"
            }
          },
          "required": [
            "return"
          ],
          "type": "object"
        }
      }
    },
    {
      "name": "book.Shelf.set_attribute_count",
      "params": [
        {
          "name": "count",
          "required": true,
          "schema": {
            "format": "int32",
            "type": "integer"
          }
        }
      ],
      "result": {
        "name": "result",
        "schema": {
          "properties": {},
          "type": "object"
        }
      }
    }
  ],
  "openrpc": "1.3.2"
}
