xidlc/tests/snapshots/codegen_snapshot__openrpc__direction.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openrpc.json
===============
{
  "info": {
    "title": "xidl",
    "version": "0.1.0"
  },
  "methods": [
    {
      "name": "calc.Calc.add",
      "params": [
        {
          "name": "a",
          "required": true,
          "schema": {
            "format": "int32",
            "type": "integer"
          }
        },
        {
          "name": "b",
          "required": true,
          "schema": {
            "format": "int32",
            "type": "integer"
          }
        }
      ],
      "result": {
        "name": "result",
        "schema": {
          "properties": {
            "return": {
              "format": "int32",
              "type": "integer"
            },
            "sum": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "return",
            "sum"
          ],
          "type": "object"
        }
      }
    },
    {
      "name": "calc.Calc.bump",
      "params": [
        {
          "name": "value",
          "required": true,
          "schema": {
            "format": "int32",
            "type": "integer"
          }
        }
      ],
      "result": {
        "name": "result",
        "schema": {
          "properties": {
            "value": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "value"
          ],
          "type": "object"
        }
      }
    },
    {
      "name": "calc.Calc.ping",
      "params": [],
      "result": {
        "name": "result",
        "schema": {
          "properties": {},
          "type": "object"
        }
      }
    }
  ],
  "openrpc": "1.3.2"
}
