xidlc/tests/snapshots/codegen_snapshot__openrpc__simple.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openrpc.json
===============
{
  "components": {
    "schemas": {
      "demo.User": {
        "properties": {
          "id": {
            "format": "int32",
            "type": "integer"
          },
          "name": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "name"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "demo",
    "version": "v0.2.0"
  },
  "methods": [
    {
      "name": "demo.UserService.get_user",
      "params": [
        {
          "name": "id",
          "required": true,
          "schema": {
            "format": "int32",
            "type": "integer"
          }
        }
      ],
      "result": {
        "name": "result",
        "schema": {
          "properties": {
            "return": {
              "$ref": "#/components/schemas/User"
            }
          },
          "required": [
            "return"
          ],
          "type": "object"
        }
      }
    }
  ],
  "openrpc": "1.3.2"
}
