xidlc/tests/snapshots/codegen_snapshot__openrpc__stream.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openrpc.json
===============
{
  "info": {
    "title": "xidl",
    "version": "0.1.0"
  },
  "methods": [
    {
      "name": "city.StreamApi.chat",
      "params": [
        {
          "name": "room_id",
          "required": true,
          "schema": {
            "type": "string"
          }
        },
        {
          "name": "text",
          "required": true,
          "schema": {
            "type": "string"
          }
        }
      ],
      "result": {
        "name": "result",
        "schema": {
          "properties": {
            "body": {
              "type": "string"
            },
            "from": {
              "type": "string"
            }
          },
          "required": [
            "from",
            "body"
          ],
          "type": "object"
        }
      },
      "x-xidl-stream": {
        "codec": "json",
        "delivery": "direct",
        "mode": "bidi"
      }
    },
    {
      "name": "city.StreamApi.get_attribute_status",
      "params": [],
      "result": {
        "name": "result",
        "schema": {
          "properties": {
            "return": {
              "type": "string"
            }
          },
          "required": [
            "return"
          ],
          "type": "object"
        }
      },
      "x-xidl-stream": {
        "codec": "json",
        "delivery": "direct",
        "mode": "server"
      }
    },
    {
      "name": "city.StreamApi.upload_sensor",
      "params": [
        {
          "name": "sensor_id",
          "required": true,
          "schema": {
            "type": "string"
          }
        },
        {
          "name": "value",
          "required": true,
          "schema": {
            "format": "int32",
            "type": "integer"
          }
        }
      ],
      "result": {
        "name": "result",
        "schema": {
          "properties": {},
          "type": "object"
        }
      },
      "x-xidl-stream": {
        "codec": "json",
        "delivery": "direct",
        "mode": "client"
      }
    },
    {
      "name": "city.StreamApi.watch_alert",
      "params": [
        {
          "name": "district",
          "required": true,
          "schema": {
            "type": "string"
          }
        }
      ],
      "result": {
        "name": "result",
        "schema": {
          "properties": {
            "message": {
              "type": "string"
            }
          },
          "required": [
            "message"
          ],
          "type": "object"
        }
      },
      "x-xidl-stream": {
        "codec": "json",
        "delivery": "direct",
        "mode": "server"
      }
    }
  ],
  "openrpc": "1.3.2"
}
